Fixes navbar bug: Not showing links on desktop

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -198,7 +198,7 @@ header .header-info {
     .menu {
       clear: none;
       float: right;
-      max-height: 0;
+      max-height: 80px;
     }
 
     .menu-icon {
